updated post model in views.py and added experience model

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,9 +19,9 @@
                     <h1><a href="/">&nbsp;crystal.</a></h1>
                     <p>welcome to my blog.</p>
                     <div class="header_links">
+                        <a href="/">home.</a>
                         <a href="{% url 'bio_page' %}">bio.</a>
                         <a href="/">cv.</a>
-                        <a href="/">contact.</a>
                     </div>
                 </center>
             </div>
