--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -21,7 +21,7 @@
                     <div class="header_links">
                         <a href="/">home.</a>
                         <a href="{% url 'bio_page' %}">bio.</a>
-                        <a href="/">cv.</a>
+                        <a href="{% url 'cv_page' %}">cv.</a>
                     </div>
                 </center>
             </div>
