--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -26,10 +26,14 @@
 
 <br>
 <h3>Experiences.</h3>
+{% if user.is_authenticated %}
 <a href="{% url 'experience_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+{% endif %}
         {% for experience in experiences %}
             <div class="exp">
+                {% if user.is_authenticated %}
                 <a class="btn btn-default" href="{% url 'experience_edit' pk=experience.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
                 <h1>{{ experience.company }}</h1><b style="font-size:45px;font-weight:300;"> /</b>&nbsp;<h2>{{ experience.title }}</h2>
                 <br>
                 <div class="accent_line"></div>
