--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -52,6 +52,19 @@
                     </div>
             </div>
         {% endfor %}
+    <br>
+        <h3>Skills.</h3>
+        <center>
+        <div class="skills_box">
+            {% for skill in skills %}
+                {% if skill.experienced %}
+                    <div class="skill_e">{{ skill.title }}</div>
+                {% else %}
+                    <div class="skill_f">{{ skill.title }}</div>
+                {% endif %}
+            {% endfor %}
+        </div>
+        </center>
 
 </div>
 {% endblock %}
