--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -53,7 +53,10 @@
             </div>
         {% endfor %}
     <br>
-        <h3>Skills.</h3>
+    <h3>Skills.</h3>
+    {% if user.is_authenticated %}
+    <a href="{% url 'skill_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    {% endif %}
         <center>
         <div class="skills_box">
             {% for skill in skills %}
