--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -53,7 +53,10 @@
             </div>
         {% endfor %}
     <br>
-        <h3>Projects.</h3>
+    <h3>Projects.</h3>
+    {% if user.is_authenticated %}
+    <a href="{% url 'project_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    {% endif %}
         {% for project in projects %}
             <div class="projects">
                 <h1>{{ project.title }}</h1>
