--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -59,6 +59,9 @@
     {% endif %}
         {% for project in projects %}
             <div class="projects">
+                {% if user.is_authenticated %}
+                    <a class="btn btn-default" href="{% url 'project_edit' pk=project.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
                 <h1>{{ project.title }}</h1>
                 <p>{{ project.work_period }}</p>
                 <p>{{ project.description | safe | linebreaksbr }}</p>
