--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -89,6 +89,9 @@
     <a href="{% url 'involvement_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
     {% endif %}
     {% for involvement in involvements %}
+        {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'involvement_edit' pk=involvement.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <div class="involvement">
                 <h1>{{ involvement.name }}</h1>
                 <h2>{{ involvement.role }}</h2>
