--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -86,6 +86,7 @@ h2, h2 a {
     color: white;
     letter-spacing: 0.5px;
     font-family: 'Playfair Display', serif;
+    font-weight: 600;
     transition:0.8s;
     padding: 10px 0px;
 }
@@ -360,12 +361,55 @@ h2, h2 a {
 .projects {
     margin-bottom: 20px;
     margin-top:20px;
-    padding: 10px;
+    padding: 20px;
     width: 900px;
     height:fit-content;
-    border:1px solid black;
     border-radius: 10px 10px;
+    text-align:right;
     transition: 1s;
+}
+
+.projects h1{
+    font-size:50px;
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
+    margin-right:50px;
+    text-shadow: 5px -1px rgb(243, 199, 76);
+    font-weight:800px;
+}
+
+.projects h2{
+    margin-top:-30px;
+    margin-left:100px;
+    position: absolute;
+    color:#C25100;
+    text-transform: uppercase;
+    font-weight:600;
+}
+
+.projects .desc {
+    float:none;
+    display:inline-block;
+    margin-left:20px;
+    width:830px;
+    border:none;
+    margin-bottom:20px;
+    padding:0;
+}
+
+.projects .desc li{
+    list-style-type: '';
+    border:2px solid #C25100;
+    color:black;
+    text-align:center;
+    padding:15px;
+    border-radius:15px;
+}
+
+.projects .accent_line{
+    width:200px;
+    margin-right:20px;
+    background-image:linear-gradient(to right, #C25100, rgb(243, 199, 76));
 }
 
 .skills_box{
