--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -373,6 +373,7 @@ h2, h2 a {
     font-size:50px;
     font-family: 'Playfair Display', serif;
     font-style: italic;
+    text-transform: lowercase;
     margin-right:50px;
     text-shadow: 5px -1px rgb(243, 199, 76);
     font-weight:800px;
@@ -380,10 +381,11 @@ h2, h2 a {
 
 .projects h2{
     margin-top:-30px;
-    margin-left:100px;
+    margin-left:80px;
     position: absolute;
-    color:#C25100;
+    color: black;
     text-transform: uppercase;
+    max-width:110px;
     font-weight:600;
 }
 
