--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -98,7 +98,7 @@
                 {% endif %}
                 <h1>{{ involvement.name }}</h1>
                 <h2>{{ involvement.role }}</h2>
-                <p>{{ involvement.work_period }}</p>
+                <h3>{{ involvement.work_period }}</h3>
                 <p>{{ involvement.description | safe | linebreaksbr }}</p>
             </div>
         {% endfor %}
