--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -4,9 +4,18 @@ body {
     font-weight: 300;
     font-size: 17px;
     line-height: 1.42857143;
-    color: black;
+    color: #424242;
     background-color: white;
 }
+
+::selection {
+    color:#b08c80;
+    background: hsla(14, 68%, 81%, 0.5); 
+  }
+  ::-moz-selection {
+    color:#b08c80;
+    background: hsla(14, 68%, 81%, 0.5); 
+  }
 
 ul {
     list-style-type: '⚬';
@@ -23,7 +32,7 @@ li{
 .post h1, h1 a, h1 a:visited {
     font-family: 'Playfair Display', serif;
     font-weight:600;
-    color: black;
+    color: #424242;
     text-decoration-line: underline;
     font-size: 43px;
 }
@@ -33,7 +42,7 @@ li{
     font-size:50px;
     font-weight: 800;
     padding:8px 15px;
-    background-color:black;
+    background-color:#424242;
     color:white;
     text-transform: lowercase;
     width:fit-content;
@@ -49,12 +58,12 @@ li{
     padding:8px 15px;
     width:fit-content;
     border-radius:10px;
-    background-image: linear-gradient(to top right, #C25100, rgb(243, 199, 76));
-    text-shadow: 1px -1px rgb(243, 199, 76);
+    background-image: linear-gradient(to top right, #f0beaf, #afdec3);
+    text-shadow: 1px -1px #afdec3;
 }
 
 h1 a:hover {
-    color: black;
+    color: #424242;
 }
 
 h2, h2 a {
@@ -69,20 +78,20 @@ h2, h2 a {
     margin-bottom: 50px;
     padding: 40px 20px 60px 120px;
     background-color: transparent;
-    border:1px solid black;
+    border:1px solid #424242;
     height:450px;
     border-radius: 44% 56% 38% 62% / 51% 58% 42% 49% ;
 }
 
 .page-header h1{
-    text-shadow: 5px -5px #C25100, 4px 1px rgb(243, 199, 76);
+    text-shadow: 5px -5px #f0beaf, 4px 1px #afdec3;
     transform: skewX(-8deg);
 }
 
 .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     font-size: 90pt;
     margin-left:-100px;
-    background-color:black;
+    background-color:#424242;
     text-decoration: none;
     color: white;
     letter-spacing: 0.5px;
@@ -94,14 +103,14 @@ h2, h2 a {
 
 .page-header h1 a:hover{
     letter-spacing: 4px;
-    /*text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #C25100, 0 0 30px #C25100, 0 0 40px #C25100, 0 0 55px #C25100, 0 0 75px #C25100;
+    /*text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #f0beaf, 0 0 30px #f0beaf, 0 0 40px #f0beaf, 0 0 55px #f0beaf, 0 0 75px #f0beaf;
     */
     transition:0.5s;
 }
 
 .page-header p{
     max-width:500px;
-    background-color:#C25100;
+    background-color:#f0beaf;
     width:fit-content;
     padding:5px;
     color:white;
@@ -113,7 +122,7 @@ h2, h2 a {
     width:50%;
     height:462px;
     border-radius: 30% 70% 70% 30% / 44% 30% 70% 56% ;
-    background-image: linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image: linear-gradient(to right, #f0beaf, #afdec3);
     position: absolute;
     z-index:-1;
     margin-left:15%;
@@ -150,8 +159,8 @@ h2, h2 a {
     width:900px;
     margin-top:81px;
     margin-left:-18px;
-    border-left: 3px solid #C25100;
-    border-right: 3px solid #C25100;
+    border-left: 3px solid #f0beaf;
+    border-right: 3px solid #f0beaf;
 }
 */
 
@@ -172,21 +181,21 @@ h2, h2 a {
     padding: 0px 8px;
     display: inline-block;
     margin: 10px 15px;
-    color:black;
-    border-bottom:5px solid black;
+    color:#424242;
+    border-bottom:5px solid #424242;
     /*
     box-shadow: 0px 2px 15px 0px rgba(209, 105, 31, 0.7);
     border-radius: 20px 20px;
-    background-image: linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image: linear-gradient(to right, #f0beaf, #afdec3);
     */
 }
 
 .header_links a:hover{
     color: white;
-    text-shadow: -3px 0 #C25100;
+    text-shadow: -3px 0 #f0beaf;
     text-transform: italic;
     border-bottom:5px solid transparent;
-    background-color:black;
+    background-color:#424242;
     text-decoration: none;
     box-shadow: none;
 }
@@ -205,12 +214,12 @@ h2, h2 a {
 }
 
 .post:nth-child(odd) .date{
-    background-image:linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to right, #f0beaf, #afdec3);
     float:left;
 }
 
 .post:nth-child(even) .date{
-    background-image:linear-gradient(to left, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to left, #f0beaf, #afdec3);
     float:right;
 }
 
@@ -235,7 +244,7 @@ h2, h2 a {
     font-weight:800;
     padding:10px;
     text-align:right;
-    background: -webkit-linear-gradient(bottom left, #C25100, rgb(243, 199, 76));
+    background: -webkit-linear-gradient(bottom left, #f0beaf, #afdec3);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -246,7 +255,7 @@ h2, h2 a {
     font-weight:600;
     font-size:20px;
     font-style:italic;
-    background:#C25100;
+    background:#f0beaf;
     color:white;
     padding:10px 15px;
     border-radius:25px;
@@ -256,7 +265,7 @@ h2, h2 a {
 
 .edu .accent_line{
     float:right;
-    background-color: black;
+    background-color: #424242;
     width:150px;
 }
 
@@ -268,11 +277,11 @@ h2, h2 a {
 }
 
 .edu .additional_info p{
-    color: #C25100;
+    color: #f0beaf;
     font-size:22px;
     margin-top:-10px;
     margin-bottom:10px;
-    background: -webkit-linear-gradient(bottom left, #C25100, #C25100);
+    background: -webkit-linear-gradient(bottom left, #f0beaf, #f0beaf);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-weight:700;
@@ -280,7 +289,7 @@ h2, h2 a {
 
 .edu .desc {
     float:right;
-    border:2px solid black;
+    border:2px solid #424242;
     margin:20px 10px -10px 0px;
     width:555px;
     height:185px;
@@ -309,7 +318,7 @@ h2, h2 a {
 }
 
 .exp h2 {
-    color: #C25100;
+    color: #f0beaf;
     font-family: 'Playfair Display', serif;
     font-weight:800;
     font-size:27px;
@@ -320,7 +329,7 @@ h2, h2 a {
 
 
 .exp .accent_line{
-    background-image:linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to right, #f0beaf, #afdec3);
     margin-left:15px;
     width:500px;
 }
@@ -332,14 +341,14 @@ h2, h2 a {
     padding: 5px;
     font-weight:400;
     margin: 20px 15px 0px 45px;
-    color:#C25100;
+    color:#f0beaf;
     background-color:white;
     border-radius: 10px;
 }
 
 .additional_info p{
     text-transform: lowercase;
-    background: -webkit-linear-gradient(top left, #C25100, rgb(243, 199, 76));
+    background: -webkit-linear-gradient(top left, #f0beaf, #afdec3);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     font-size:20px;
@@ -355,7 +364,7 @@ h2, h2 a {
     height:fit-content;
     padding: 18px 25px;
     margin: 20px 15px -40px 20px;
-    border: 2px solid black;
+    border: 2px solid #424242;
     border-radius: 10px;
 }
 
@@ -375,7 +384,7 @@ h2, h2 a {
     font-family: 'Playfair Display', serif;
     font-style: italic;
     margin-right:50px;
-    text-shadow: 5px -1px rgb(243, 199, 76);
+    text-shadow: 5px -1px #afdec3;
     font-weight:800px;
 }
 
@@ -383,7 +392,7 @@ h2, h2 a {
     margin-top:-30px;
     margin-left:80px;
     position: absolute;
-    color: black;
+    color: #424242;
     text-transform: uppercase;
     max-width:110px;
     font-weight:600;
@@ -400,13 +409,13 @@ h2, h2 a {
 }
 
 .projects .desc b {
-    color:#C25100;
+    color:#f0beaf;
 }
 
 .projects .desc li{
     list-style-type: '';
-    border:2px solid #C25100;
-    color:black;
+    border:2px solid #f0beaf;
+    color:#424242;
     text-align:center;
     padding:15px;
     border-radius:15px;
@@ -415,7 +424,7 @@ h2, h2 a {
 .projects .accent_line{
     width:200px;
     margin-right:20px;
-    background-image:linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to right, #f0beaf, #afdec3);
 }
 
 .skills_box{
@@ -437,9 +446,9 @@ h2, h2 a {
     font-weight:700;
     margin:10px;
     border-radius:25px;
-    border:3px solid #C25100;
+    border:3px solid #f0beaf;
     color: white;
-    background: #C25100;
+    background: #f0beaf;
 }
 
 .skill_f{
@@ -451,8 +460,8 @@ h2, h2 a {
     margin:10px;
     border:3px solid;
     border-radius:25px;
-    border-image:-webkit-linear-gradient(top left, #C25100, rgb(243, 199, 76)) 1;
-    background: -webkit-linear-gradient(top left, #C25100, rgb(243, 199, 76));
+    border-image:-webkit-linear-gradient(top left, #f0beaf, #afdec3) 1;
+    background: -webkit-linear-gradient(top left, #f0beaf, #afdec3);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -463,7 +472,7 @@ h2, h2 a {
     padding: 10px 30px 10px 30px;
     width: 900px;
     height:fit-content;
-    border:2px solid black;
+    border:2px solid #424242;
     border-radius: 10px 10px;
     transition: 1s;
 }
@@ -482,7 +491,7 @@ h2, h2 a {
     width:fit-content;
     text-shadow: none;
     border-radius:15px;
-    background-image:linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to right, #f0beaf, #afdec3);
 }
 
 .involvement h3{
@@ -490,7 +499,7 @@ h2, h2 a {
     text-transform: lowercase;
     font-weight:600;
     background:none;
-    color:#C25100;
+    color:#f0beaf;
     font-size:17px;
     box-shadow: none;
 }
@@ -506,7 +515,7 @@ h2, h2 a {
 .post {
     margin-bottom: 70px;
     padding: 10px;
-    border: 1px solid #333;
+    border: 1px solid #424242;
     width: 600px;
     border-radius: 10px 10px;
     box-shadow: 8px 8px 1px #ededed;
@@ -523,7 +532,7 @@ h2, h2 a {
     font-size:22px;
     height:fit-content;
     border-radius: 10px;
-    border:2px solid black;
+    border:2px solid #424242;
     box-shadow: 8px 8px 1px #ededed;
     position: static;
     transition: 1s;
@@ -531,27 +540,27 @@ h2, h2 a {
 
 .bio a {
     font-weight:800;
-    background: -webkit-linear-gradient(bottom left, #C25100, rgb(243, 199, 76));
+    background: -webkit-linear-gradient(bottom left, #f0beaf, #afdec3);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    border-bottom:5px solid black;
+    border-bottom:5px solid #424242;
 }
 
 .bio a:hover{
     text-decoration: none;
     border-bottom:3px solid transparent;
-    background: -webkit-linear-gradient(bottom left, #000, #000);
+    background: -webkit-linear-gradient(bottom left, #424242, #424242);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    background-color:black;
-    color:black;
+    background-color:#424242;
+    color:#424242;
 }
 
 .bio_img {
     height:300px;
     width:300px;
     border-radius: 100%;
-    border:3px solid #C25100;
+    border:3px solid #f0beaf;
     border-radius:44% 56% 46% 54% / 53% 61% 39% 47% ;
     position: absolute;
     margin-left:390px;
@@ -577,18 +586,18 @@ h2, h2 a {
     margin-top: 5px;
     width:75px;
     height:5px;
-    background-color: #C25100;
+    background-color: #f0beaf;
     vertical-align: 50%;
     display:inline-block;
     transition:1s;
 }
 
 .post:nth-child(odd) .accent_line{
-    background-image:linear-gradient(to right, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to right, #f0beaf, #afdec3);
 }
 
 .post:nth-child(even) .accent_line{
-    background-image:linear-gradient(to left, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to left, #f0beaf, #afdec3);
 }
 
 .post:hover .accent_line{
@@ -654,7 +663,7 @@ h2, h2 a {
 
 .post_detail h2 {
     color: white;
-    background-image:linear-gradient(to top right, #C25100, rgb(243, 199, 76));
+    background-image:linear-gradient(to top right, #f0beaf, #afdec3);
     width:fit-content;
     padding:8px 12px;
     border-radius:15px;
@@ -663,7 +672,7 @@ h2, h2 a {
 .post_detail .post{
     width:800px;
     border:none;
-    border:2px solid black;
+    border:2px solid #424242;
     margin-left: 90px;
     margin-top: 50px;
 }
@@ -673,7 +682,7 @@ h2, h2 a {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color:#C25100;
+    color:#f0beaf;
     float: right;
     font-family: 'Roboto', sans-serif;
     font-size: 26pt;
