--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,8 @@
             <h1><a href="{% url 'post_detail' pk=post.pk %}">
                 {{ post.title }}.
             </a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
+            <br>
+            <p>{{ post.text | safe | linebreaksbr }}</p>
             <br>
             <div class="connecting_line"></div>
             <div class="date">
