--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -206,9 +206,10 @@ h2, h2 a {
     text-transform: uppercase;
     width: fit-content;
     padding: 5px 15px;
-    font-size:14px;
+    font-size:18px;
     color:white;
     float:left;
+    margin-top:-8px;
     border-radius: 20px;
     margin-bottom:20px;
 }
@@ -671,10 +672,16 @@ h2, h2 a {
 
 .post_detail .post{
     width:800px;
-    border:none;
-    border:2px solid #424242;
+    border:2px solid;
+    padding: 0 30px 20px 30px;
     margin-left: 90px;
     margin-top: 50px;
+}
+
+.post_detail h2 {
+    text-transform:uppercase;
+    font-weight:600;
+    margin-bottom:-2px;
 }
 
 .post-form textarea, .post-form input {
