fixed login, created super user

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -151,28 +151,7 @@ h2, h2 a {
 
 .content {
     width: 1000px;
-    /*
-    border-width: 3px;
-    border-style: solid;
-    border-image: 
-    repeating-linear-gradient(
-      rgba(0, 0, 0, 0) 90%,
-      rgba(209, 105, 31, 1), 
-      rgba(0, 0, 0, 0)
-    ) 1 100%;
-    margin-top: -40px;
-    */
 }
-
-/*
-.side-lines{
-    width:900px;
-    margin-top:81px;
-    margin-left:-18px;
-    border-left: 3px solid #f0beaf;
-    border-right: 3px solid #f0beaf;
-}
-*/
 
 .header_links{
     text-decoration: none;
@@ -197,7 +176,7 @@ h2, h2 a {
 
 .header_links a:hover{
     color: white;
-    text-shadow: -3px 0 #f0beaf;
+    text-shadow: -3px 0 #afdec3;
     text-transform: italic;
     border-bottom:5px solid transparent;
     background-color:#424242;
@@ -534,7 +513,7 @@ h2, h2 a {
 
 .post_content{
     position: relative;
-    max-height:500px;
+    max-height:600px;
     overflow:hidden;
     text-overflow: ellipsis;
     transition: 1s;
