Added visitor functional test for bio and cv

--- a/blog/templates/blog/cv_page.html
+++ b/blog/templates/blog/cv_page.html
@@ -9,7 +9,7 @@
         <div class="accent_line"></div>
         <br>
         <div class="desc">
-             <p>Currently pursuing a <b>B.S. in Computer Science </b>
+             <p>Currently pursuing a <b>B.S. in Computer Science </b></p>
              <p>with a <b>Creative Writing Minor</b> and an alumni of the</p>
              <p><i>Advanced Cybersecurity Experience for Students</i></p>
              <p>Honors College, also known as <b>ACES</b>.</p>
