--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -128,6 +128,27 @@ h2, h2 a {
     z-index:99999;
 }
 
+.login {
+    width: fit-content;
+    padding:5px 18px;
+    color:#afdec3;
+    border: 4px solid #afdec3;
+    background-color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight:600;
+    font-size:27px;
+    margin-top:-60px;
+    margin-left:-160px;
+    border-radius: 30px;
+    transition:0.3s;
+}
+
+.login:hover{
+    background-color: #afdec3;
+    color:white;
+    transition:0.3s;
+}
+
 .shape_1{
     width:50%;
     height:462px;
