added git link to repo

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -25,6 +25,7 @@
                         <a href="/">home.</a>
                         <a href="{% url 'bio_page' %}">bio.</a>
                         <a href="{% url 'cv_page' %}">cv.</a>
+                        <a href="https://github.com/cryswang/alter-blog">github.</a>
                     </div>
                 </center>
             </div>
